Prevent overflow for introduction & change color.

--- a/static/css/introduction.css
+++ b/static/css/introduction.css
@@ -1,15 +1,15 @@
 /* Images styles */
 
 .character-img {
-  width: 200px;
-  height: 200px;
+  width: 100px;
+  height: 100px;
   object-fit: contain;
   margin-bottom: 10px;
 }
 
 .character-portrait {
-  width: 180px;
-  height: 180px;
+  width: 100px;
+  height: 100px;
   object-fit: contain;
   margin-bottom: 15px;
 }
